--- a/Views/Flyuot2.xaml
+++ b/Views/Flyuot2.xaml
@@ -2,7 +2,7 @@
 <FlyoutPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SoundScribe.Views.Flyuot2"
-             Title="Flyuot2">
+             Title="Sound Scribe">
     <FlyoutPage.Flyout>
         <ContentPage Title="Menu" BackgroundColor="#505050">
             <StackLayout>
