--- a/Views/SecondMain.xaml
+++ b/Views/SecondMain.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SoundScribe.Views.SecondMain"
-             Title="Flyout2"
+            Title="Sound Scribe"
              BackgroundImageSource="church_1.png">
 
     
