--- a/Views/Flyuot2.xaml
+++ b/Views/Flyuot2.xaml
@@ -4,12 +4,23 @@
              x:Class="SoundScribe.Views.Flyuot2"
              Title="Sound Scribe">
     <FlyoutPage.Flyout>
-        <ContentPage Title="Menu" BackgroundColor="#505050">
-            <StackLayout>
-                <Button Text="Main Page" Clicked="Button_Clicked" BackgroundColor="#2B2B2B"/>
-                <Button Text="Leaderboard" Clicked="OnPage1Clicked" BackgroundColor="#2B2B2B"/>
-                <Button Text="Tracklist" Clicked="OnPage2Clicked" BackgroundColor="#2B2B2B"/>
-                <Button Text="Add Track" Clicked="OnPage3Clicked" BackgroundColor="#2B2B2B"/>
+        <ContentPage Title="Menu" BackgroundColor="#505050" BackgroundImageSource="church">
+            <StackLayout Margin="10, 300, 150, 0">
+                <AbsoluteLayout>
+                    <Frame
+                        AbsoluteLayout.LayoutBounds="0.5, 10, 1 ,1"
+                        AbsoluteLayout.LayoutFlags="PositionProportional"
+                        BackgroundColor="#2A2A2A"
+                        BorderColor="Black"
+                        CornerRadius="30"
+                        HeightRequest="200"
+                        WidthRequest="180"
+                        Opacity="0.7"/>
+                </AbsoluteLayout>
+                <Button Text="Main Page" Clicked="Button_Clicked" BackgroundColor="#870202" Opacity="0.9" TextColor="Black" BorderColor="Black" BorderWidth="1" Margin="20,5,20,5"/>
+                <Button Text="Leaderboard" Clicked="OnPage1Clicked" BackgroundColor="#870202" Opacity="0.9" TextColor="Black" BorderColor="Black" BorderWidth="1" Margin="20,5,20,5"/>
+                <Button Text="Tracklist" Clicked="OnPage2Clicked" BackgroundColor="#870202" Opacity="0.9" TextColor="Black" BorderColor="Black" BorderWidth="1" Margin="20,5,20,5"/>
+                <Button Text="Add Track" Clicked="OnPage3Clicked" BackgroundColor="#870202" Opacity="0.9" TextColor="Black" BorderColor="Black" BorderWidth="1" Margin="20,5,20,5"/>
             </StackLayout>
         </ContentPage>
     </FlyoutPage.Flyout>
@@ -42,37 +53,25 @@
                                             <ViewCell.View>
                                                 <AbsoluteLayout>
                                                     <Frame
-                                                        AbsoluteLayout.LayoutBounds="0.2, 0.1, 0.98, 1"
+                                                        AbsoluteLayout.LayoutBounds="0.5, 1, 0.8, 1"
                                                         AbsoluteLayout.LayoutFlags="All"
                                                         BackgroundColor="#2A2A2A"
                                                         CornerRadius="60"
                                                         HasShadow="False" 
                                                         Padding="0"
-                                                        Margin="10, 0, 10, 0"
-                                                        HeightRequest="100"/>
+                                                        Margin="10, 0 ,10 ,0"
+                                                        BorderColor="Black"
+                                                        HeightRequest="45"/>
                                                     <StackLayout Orientation="Horizontal" Padding="5">
                                                         <Frame 
                                                             CornerRadius="60" 
-                                                            Margin="10, -50, 5, 0" 
-                                                            WidthRequest="40" 
-                                                            HeightRequest="40">
-                                                            <Image Source = "{Binding Image}" WidthRequest="50" HeightRequest="50"/>
+                                                            Margin="50, 0, 5, 0" 
+                                                            WidthRequest="35" 
+                                                            HeightRequest="35">
+                                                            <Image Source="{Binding Image}" WidthRequest="45" HeightRequest="45"/>
                                                         </Frame>
-                                                        <Frame
-                                                            HeightRequest="100"
-                                                            HasShadow="False"
-                                                            Margin="0, -18, 0, 0"
-                                                            BackgroundColor="#2A2A2A">
-                                                            <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF"/>
-                                                        </Frame>
-                                                        <Frame
-                                                            HeightRequest="100"
-                                                            WidthRequest="100"
-                                                            HasShadow="False"
-                                                            Margin="0, -13, 0, 0"
-                                                            BackgroundColor="#2A2A2A">
-                                                            <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56"/>
-                                                        </Frame>
+                                                        <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF" Margin="20, 5, 10, 0"/>
+                                                        <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56" Margin="30, 9, 30, 0"/>
                                                     </StackLayout>
                                                 </AbsoluteLayout>
                                             </ViewCell.View>
@@ -90,37 +89,25 @@
                                         <ViewCell>
                                             <AbsoluteLayout>
                                                 <Frame
-                                                    AbsoluteLayout.LayoutBounds="0.2, 0.1, 0.98, 1"
+                                                    AbsoluteLayout.LayoutBounds="0.5, 1, 0.8, 1"
                                                     AbsoluteLayout.LayoutFlags="All"
                                                     BackgroundColor="#2A2A2A"
                                                     CornerRadius="60"
                                                     HasShadow="False" 
                                                     Padding="0"
-                                                    Margin="10, 0, 10, 0"
-                                                    HeightRequest="100"/>
+                                                    Margin="10, 0 ,10 ,0"
+                                                    BorderColor="Black"
+                                                    HeightRequest="45"/>
                                                 <StackLayout Orientation="Horizontal" Padding="5">
                                                     <Frame 
                                                         CornerRadius="60" 
-                                                        Margin="10, -50, 5, 0" 
-                                                        WidthRequest="40" 
-                                                        HeightRequest="40">
-                                                        <Image Source = "{Binding Image}" WidthRequest="50" HeightRequest="50"/>
+                                                        Margin="50, 0, 5, 0" 
+                                                        WidthRequest="35" 
+                                                        HeightRequest="35">
+                                                        <Image Source="{Binding Image}" WidthRequest="45" HeightRequest="45"/>
                                                     </Frame>
-                                                    <Frame
-                                                        HeightRequest="100"
-                                                        HasShadow="False"
-                                                        Margin="0, -18, 0, 0"
-                                                        BackgroundColor="#2A2A2A">
-                                                        <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF"/>
-                                                    </Frame>
-                                                    <Frame
-                                                        HeightRequest="100"
-                                                        WidthRequest="100"
-                                                        HasShadow="False"
-                                                        Margin="0, -13, 0, 0"
-                                                        BackgroundColor="#2A2A2A">
-                                                        <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56"/>
-                                                    </Frame>
+                                                    <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF" Margin="20, 5, 10, 0"/>
+                                                    <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56" Margin="30, 9, 30, 0"/>
                                                 </StackLayout>
                                             </AbsoluteLayout>
                                         </ViewCell>
@@ -135,48 +122,26 @@
                                         <ViewCell>
                                             <AbsoluteLayout>
                                                 <Frame
-                                                    AbsoluteLayout.LayoutBounds="0.2, 0.1, 0.98, 1"
+                                                    AbsoluteLayout.LayoutBounds="0.5, 1, 0.8, 1"
                                                     AbsoluteLayout.LayoutFlags="All"
                                                     BackgroundColor="#2A2A2A"
                                                     CornerRadius="60"
                                                     HasShadow="False" 
                                                     Padding="0"
-                                                    Margin="5"
-                                                    HeightRequest="120"/>
+                                                    Margin="10, 0 ,10 ,0"
+                                                    BorderColor="Black"
+                                                    HeightRequest="45"/>
                                                 <StackLayout Orientation="Horizontal" Padding="5">
-                                                    <StackLayout Orientation="Horizontal">
-                                                        <Frame 
-                                                            CornerRadius="60" 
-                                                            Margin="10, -50, 5, 0" 
-                                                            WidthRequest="40" 
-                                                            HeightRequest="40">
-                                                            <Image Source="{Binding Image}" WidthRequest="50" HeightRequest="50"/>
-                                                        </Frame>
-                                                        <Frame
-                                                            HeightRequest="100"
-                                                            HasShadow="False"
-                                                            Margin="0, -18, 0, 0"
-                                                            BackgroundColor="#2A2A2A">
-                                                            <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF"/>
-                                                        </Frame>
-                                                        <Frame
-                                                            HeightRequest="100"
-                                                            WidthRequest="100"
-                                                            HasShadow="False"
-                                                            Margin="0, -13, 0, 0"
-                                                            BackgroundColor="#2A2A2A">
-                                                            <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56"/>
-                                                        </Frame>
-                                                        <Label Text=" " />
-                                                        <Frame
-                                                            HeightRequest="100"
-                                                            WidthRequest="80"
-                                                            HasShadow="False"
-                                                            Margin="-10, -15, 0, 0"
-                                                            BackgroundColor="#2A2A2A">
-                                                            <Label Text="{Binding C}" FontSize="Medium" TextColor="#FFFFFF"/>
-                                                        </Frame>
-                                                    </StackLayout>
+                                                    <Frame 
+                                                        CornerRadius="60" 
+                                                        Margin="50, 0, 5, 0" 
+                                                        WidthRequest="35" 
+                                                        HeightRequest="35">
+                                                        <Image Source="{Binding Image}" WidthRequest="45" HeightRequest="45"/>
+                                                    </Frame>
+                                                    <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF" Margin="10, 5, 10, 0"/>
+                                                    <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56" Margin="10, 9, 30, 0"/>
+                                                    <Label Text="{Binding C}" FontSize="Medium" TextColor="#FFFFFF" Margin="0, 5,0,0"/>
                                                 </StackLayout>
                                             </AbsoluteLayout>
                                         </ViewCell>
