--- a/Views/RatePage.xaml
+++ b/Views/RatePage.xaml
@@ -13,25 +13,26 @@
                 <Frame
                 AbsoluteLayout.LayoutBounds="0.51,0.8, 1, 1"
                 AbsoluteLayout.LayoutFlags="PositionProportional"
-                HeightRequest="330"
-                WidthRequest="250"
+                HeightRequest="210"
+                WidthRequest="360"
                 HasShadow="False"
                 CornerRadius="60"
                 BorderColor="#000000"
                 BackgroundColor="#2A2A2A"
-                Margin="20, 325, 30, 10"/>
+                Margin="20, 250, 30, 10"
+                Opacity="0.8"/>
             </AbsoluteLayout>
             <Frame
-                HeightRequest="200"
-                WidthRequest="200"
-                CornerRadius="80"
+                HeightRequest="190"
+                WidthRequest="190"
+                CornerRadius="100"
                 BorderColor="#000000"
-                Margin="20, 10, 20, 5">
-                <Image Source="{Binding Image}" WidthRequest="300" HeightRequest="300"/>
+                Margin="160, 25, 20, 5">
+                <Image Source="{Binding Image}" WidthRequest="200" HeightRequest="200"/>
             </Frame>
             <StackLayout HorizontalOptions="Center">
                 <Frame
-                    Margin="0, -10, 0, 0"
+                    Margin="-190, -150, 0, 0"
                     HasShadow="False"
                     HeightRequest="60"
                     WidthRequest="240"
@@ -42,7 +43,7 @@
                 <Frame
                     HeightRequest="70"
                     WidthRequest="240"
-                    Margin="0, -30, 0, 0"
+                    Margin="-190, -30, 0, 0"
                     HasShadow="False"
                     BackgroundColor="Transparent"
                     HorizontalOptions="Center">
@@ -54,7 +55,7 @@
             <Frame
                 BackgroundColor="Transparent"
                 HeightRequest="260"
-                Margin="0, 20, 0, 0"
+                Margin="0, 50, 0, 40"
                 >
                 <WebView x:Name="SoundCloudWebView"
                  HorizontalOptions="FillAndExpand"
@@ -62,6 +63,19 @@
                  Source="{Binding Link}"/>
             </Frame>
         </StackLayout>
+        <AbsoluteLayout>
+            <Frame
+                AbsoluteLayout.LayoutBounds="0.51,0.8, 1, 1"
+                AbsoluteLayout.LayoutFlags="PositionProportional"
+                HeightRequest="210"
+                WidthRequest="320"
+                HasShadow="False"
+                CornerRadius="40"
+                BorderColor="#000000"
+                Opacity="0.8"
+                BackgroundColor="#2A2A2A"
+                Margin="20, 140, 30, 10"/>
+        </AbsoluteLayout>
         <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="10, -20, 10, 0">
             <VerticalStackLayout HorizontalOptions="Center" Margin="10, 0">
                 <Label Text="Rhymes" TextColor="#FFFFFF"/>
@@ -82,7 +96,7 @@
             </VerticalStackLayout>
         </StackLayout>
 
-        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="10, 5, 10, 0">
+        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="10, 5, 10, 30">
             <VerticalStackLayout HorizontalOptions="Center" Margin="10, 0">
                 <Label Text="Individuality" TextColor="#FFFFFF"/>
                 <Slider x:Name="IndividualitySlider" ValueChanged="Slider_ValueChanged" WidthRequest="80" Minimum="0" Maximum="10" Value="{Binding Individuality, Mode=TwoWay}" />
@@ -103,8 +117,8 @@
         </StackLayout>
 
         <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-            <Button Text="Save" Clicked="Button_Clicked" BackgroundColor="#505050" Margin="0, 0, 10, 0"/>
-            <Button Text="Cancel" Clicked="Cancel" BackgroundColor="#505050"/>
+            <Button Text="Save" Clicked="Button_Clicked" BackgroundColor="#870202" BorderColor="Black" BorderWidth="1" Margin="0, 0, 10, 0"/>
+            <Button Text="Cancel" Clicked="Cancel" BackgroundColor="#870202" BorderColor="Black" BorderWidth="1"/>
         </StackLayout>
     </StackLayout>
 </ContentPage>
