--- a/Views/SecondMain.xaml
+++ b/Views/SecondMain.xaml
@@ -18,7 +18,7 @@
             </Grid.ColumnDefinitions>
 
             <StackLayout Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
-                <Entry x:Name="song_search" Text="Search..." TextChanged="OnSearchTextChanged" WidthRequest="390"/>
+            <Entry x:Name="song_search" Text="Search..." TextChanged="OnSearchTextChanged" WidthRequest="390" />
             </StackLayout>
 
             <StackLayout Grid.Row="1" Grid.Column="0">
@@ -29,40 +29,28 @@
                             <ViewCell>
                                 <ViewCell.View>
                                     <AbsoluteLayout>
-                                        <Frame
-                                         AbsoluteLayout.LayoutBounds="0.2, 0.1, 0.98, 1"
-                                         AbsoluteLayout.LayoutFlags="All"
-                                         BackgroundColor="#2A2A2A"
-                                         CornerRadius="60"
-                                         HasShadow="False" 
-                                         Padding="0"
-                                         Margin="10, 0, 10, 0"
-                                         HeightRequest="100"/>
-                                        <StackLayout Orientation="Horizontal" Padding="5">
-                                            <Frame 
-                                             CornerRadius="60" 
-                                             Margin="10, -50, 5, 0" 
-                                             WidthRequest="40" 
-                                             HeightRequest="40">
-                                                <Image Source = "{Binding Image}" WidthRequest="50" HeightRequest="50"/>
-                                            </Frame>
-                                            <Frame
-                                             HeightRequest="100"
-                                             HasShadow="False"
-                                             Margin="0, -18, 0, 0"
-                                             BackgroundColor="#2A2A2A">
-                                                <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF"/>
-                                            </Frame>
-                                            <Frame
-                                             HeightRequest="100"
-                                             WidthRequest="100"
-                                             HasShadow="False"
-                                             Margin="0, -13, 0, 0"
-                                             BackgroundColor="#2A2A2A">
-                                                <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56"/>
-                                            </Frame>
-                                        </StackLayout>
-                                    </AbsoluteLayout>
+                                    <Frame
+                                        AbsoluteLayout.LayoutBounds="0.5, 1, 0.8, 1"
+                                        AbsoluteLayout.LayoutFlags="All"
+                                        BackgroundColor="#2A2A2A"
+                                        CornerRadius="60"
+                                        HasShadow="False" 
+                                        Padding="0"
+                                        Margin="10, 0 ,10 ,0"
+                                        BorderColor="Black"
+                                        HeightRequest="45"/>
+                                    <StackLayout Orientation="Horizontal" Padding="5">
+                                        <Frame 
+                                            CornerRadius="60" 
+                                            Margin="50, 0, 5, 0" 
+                                            WidthRequest="35" 
+                                            HeightRequest="35">
+                                            <Image Source="{Binding Image}" WidthRequest="45" HeightRequest="45"/>
+                                        </Frame>
+                                        <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF" Margin="20, 5, 10, 0"/>
+                                        <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56" Margin="30, 9, 30, 0"/>
+                                    </StackLayout>
+                                </AbsoluteLayout>
                                 </ViewCell.View>
                             </ViewCell>
                         </DataTemplate>
@@ -78,39 +66,27 @@
                             <ViewCell>
                                 <AbsoluteLayout>
                                     <Frame
-                                     AbsoluteLayout.LayoutBounds="0.2, 0.1, 0.98, 1"
-                                     AbsoluteLayout.LayoutFlags="All"
-                                     BackgroundColor="#2A2A2A"
-                                     CornerRadius="60"
-                                     HasShadow="False" 
-                                     Padding="0"
-                                     Margin="10, 0, 10, 0"
-                                     HeightRequest="100"/>
-                                    <StackLayout Orientation="Horizontal" Padding="5">
-                                        <Frame 
-                                         CornerRadius="60" 
-                                         Margin="10, -50, 5, 0" 
-                                         WidthRequest="40" 
-                                         HeightRequest="40">
-                                            <Image Source = "{Binding Image}" WidthRequest="50" HeightRequest="50"/>
-                                        </Frame>
-                                        <Frame
-                                         HeightRequest="100"
-                                         HasShadow="False"
-                                         Margin="0, -18, 0, 0"
-                                         BackgroundColor="#2A2A2A">
-                                            <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF"/>
-                                        </Frame>
-                                        <Frame
-                                         HeightRequest="100"
-                                         WidthRequest="100"
-                                         HasShadow="False"
-                                         Margin="0, -13, 0, 0"
-                                         BackgroundColor="#2A2A2A">
-                                            <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56"/>
-                                        </Frame>
-                                    </StackLayout>
-                                </AbsoluteLayout>
+                                        AbsoluteLayout.LayoutBounds="0.5, 1, 0.8, 1"
+                                        AbsoluteLayout.LayoutFlags="All"
+                                        BackgroundColor="#2A2A2A"
+                                        CornerRadius="60"
+                                        HasShadow="False" 
+                                        Padding="0"
+                                        Margin="10, 0 ,10 ,0"
+                                        BorderColor="Black"
+                                        HeightRequest="45"/>
+                                <StackLayout Orientation="Horizontal" Padding="5">
+                                    <Frame 
+                                            CornerRadius="60" 
+                                            Margin="50, 0, 5, 0" 
+                                            WidthRequest="35" 
+                                            HeightRequest="35">
+                                        <Image Source="{Binding Image}" WidthRequest="45" HeightRequest="45"/>
+                                    </Frame>
+                                    <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF" Margin="20, 5, 10, 0"/>
+                                    <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56" Margin="30, 9, 30, 0"/>
+                                </StackLayout>
+                            </AbsoluteLayout>
                             </ViewCell>
                         </DataTemplate>
                     </ListView.ItemTemplate>
@@ -122,51 +98,29 @@
                         <DataTemplate>
                             <ViewCell>
                                 <AbsoluteLayout>
-                                    <Frame
-                                     AbsoluteLayout.LayoutBounds="0.2, 0.1, 0.98, 1"
-                                     AbsoluteLayout.LayoutFlags="All"
-                                     BackgroundColor="#2A2A2A"
-                                     CornerRadius="60"
-                                     HasShadow="False" 
-                                     Padding="0"
-                                     Margin="5"
-                                     HeightRequest="120"/>
-                                    <StackLayout Orientation="Horizontal" Padding="5">
-                                        <StackLayout Orientation="Horizontal">
-                                            <Frame 
-                                             CornerRadius="60" 
-                                             Margin="10, -50, 5, 0" 
-                                             WidthRequest="40" 
-                                             HeightRequest="40">
-                                                <Image Source="{Binding Image}" WidthRequest="50" HeightRequest="50"/>
-                                            </Frame>
-                                            <Frame
-                                             HeightRequest="100"
-                                             HasShadow="False"
-                                             Margin="0, -18, 0, 0"
-                                             BackgroundColor="#2A2A2A">
-                                                <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF"/>
-                                            </Frame>
-                                            <Frame
-                                             HeightRequest="100"
-                                             WidthRequest="100"
-                                             HasShadow="False"
-                                             Margin="0, -13, 0, 0"
-                                             BackgroundColor="#2A2A2A">
-                                                <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56"/>
-                                            </Frame>
-                                            <Label Text=" " />
-                                            <Frame
-                                             HeightRequest="100"
-                                             WidthRequest="80"
-                                             HasShadow="False"
-                                             Margin="-10, -15, 0, 0"
-                                             BackgroundColor="#2A2A2A">
-                                                <Label Text="{Binding C}" FontSize="Medium" TextColor="#FFFFFF"/>
-                                            </Frame>
-                                        </StackLayout>
-                                    </StackLayout>
-                                </AbsoluteLayout>
+                                <Frame
+                                    AbsoluteLayout.LayoutBounds="0.5, 1, 0.8, 1"
+                                    AbsoluteLayout.LayoutFlags="All"
+                                    BackgroundColor="#2A2A2A"
+                                    CornerRadius="60"
+                                    HasShadow="False" 
+                                    Padding="0"
+                                    Margin="10, 0 ,10 ,0"
+                                    BorderColor="Black"
+                                    HeightRequest="45"/>
+                                <StackLayout Orientation="Horizontal" Padding="5">
+                                    <Frame 
+                                        CornerRadius="60" 
+                                        Margin="50, 0, 5, 0" 
+                                        WidthRequest="35" 
+                                        HeightRequest="35">
+                                        <Image Source="{Binding Image}" WidthRequest="45" HeightRequest="45"/>
+                                    </Frame>
+                                    <Label Text="{Binding Song_Name }" FontSize="Medium" TextColor="#FFFFFF" Margin="10, 5, 10, 0"/>
+                                    <Label Text="{Binding Artist}" FontSize="Small" TextColor="#FFFFFF" Opacity="0.56" Margin="10, 9, 30, 0"/>
+                                    <Label Text="{Binding C}" FontSize="Medium" TextColor="#FFFFFF" Margin="0, 5,0,0"/>
+                                </StackLayout>
+                            </AbsoluteLayout>
                             </ViewCell>
                         </DataTemplate>
                     </ListView.ItemTemplate>
